--- a/backend/media_filer/templates/admin/filer/image/change_form.html
+++ b/backend/media_filer/templates/admin/filer/image/change_form.html
@@ -1,5 +1,5 @@
 {% extends "admin/filer/change_form.html" %}
-{% load i18n admin_modify staticfiles %}
+{% load i18n admin_modify staticfiles thumbnail %}
 
 {% block extrahead %}
     {{ block.super }}
@@ -31,12 +31,10 @@
 {% endblock %}
 
 {% block object-tools %}
-    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-    AAAAAAAAAA
-    AAAAAAAAAAAA
+    {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping crop detail %}
     {% if change and not is_popup %}
         <ul class="object-tools">
-            <li><a href="{% url history_url object_id %}" class="historylink">{% trans "History123" %}</a></li>
+            <li><a href="{% url history_url object_id %}" class="historylink">{% trans "History" %}</a></li>
             {% if has_absolute_url %}
                 <li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>
             {% endif%}
