--- a/backend/templates/admin/filer/image/change_form.html
+++ b/backend/templates/admin/filer/image/change_form.html
@@ -31,12 +31,9 @@
 {% endblock %}
 
 {% block object-tools %}
-    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-    AAAAAAAAAA
-    AAAAAAAAAAAA
     {% if change and not is_popup %}
         <ul class="object-tools">
-            <li><a href="{% url history_url object_id %}" class="historylink">{% trans "History123" %}</a></li>
+            <li><a href="{% url history_url object_id %}" class="historylink">{% trans "History" %}</a></li>
             {% if has_absolute_url %}
                 <li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>
             {% endif%}
