--- a/backend/templates/admin/filer/tools/detail_info.html
+++ b/backend/templates/admin/filer/tools/detail_info.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n staticfiles thumbnail %}
 {% if detail %}
     <section class="image-info image-info-detail">
         <div class="image-info-title">
@@ -74,6 +74,8 @@
         </div>
 
         <div class="image-preview-container">
+{#            {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping crop detail %}#}
+            {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping %}
             <div class="image-preview js-focal-point">
                 <img src="http://lorempixel.com/210/266" data-ratio="4.638095" width="210" height="266" class="js-focal-point-image">
                 <div class="image-preview-field">
