--- a/backend/media_filer/templates/admin/tools/detail_info.html
+++ b/backend/media_filer/templates/admin/tools/detail_info.html
@@ -49,9 +49,12 @@
                     {% endif %}
                     {% if original.uploaded_at %}
                         <dt>{% trans "Created" %}</dt>
-                        <dd>{{ original.uploaded_at }} 11111</dd>
+                        <dd>{{ original.uploaded_at }}</dd>
                     {% endif %}
                 </dl>
+{#                {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping crop detail %}#}
+                {% thumbnail original 430x360 box=original.cropping %}
+                <img src="{% thumbnail original 430x360 %}" alt="">
                 <div class="image-actions">
                     <ul class="actions-list">
                         <li>
@@ -75,7 +78,6 @@
         </div>
 
         <div class="image-preview-container">
-            {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping crop detail %}
             <div class="image-preview js-focal-point">
                 <img src="http://lorempixel.com/210/266" data-ratio="4.638095" width="210" height="266" class="js-focal-point-image">
                 <div class="image-preview-field">
