--- a/backend/templates/admin/filer/tools/detail_info.html
+++ b/backend/templates/admin/filer/tools/detail_info.html
@@ -61,6 +61,7 @@
                         </li>
                     </ul>
                 </div>
+                <img src="{% thumbnail original 430x360 %}" alt="">
             {% endif %}
         </div>
     </section>
@@ -74,8 +75,9 @@
         </div>
 
         <div class="image-preview-container">
-{#            {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping crop detail %}#}
-            {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping %}
+{#            {% thumbnail yourmodel.image 430x360 box=yourmodel.cropping %}#}
+{#            {{ original.url }}#}
+{#            {% thumbnail original.image 430x360 %}#}
             <div class="image-preview js-focal-point">
                 <img src="http://lorempixel.com/210/266" data-ratio="4.638095" width="210" height="266" class="js-focal-point-image">
                 <div class="image-preview-field">
