--- a/backend/media_filer/templates/admin/image/filer_image_change_form.html
+++ b/backend/media_filer/templates/admin/image/filer_image_change_form.html
@@ -31,8 +31,6 @@
 {% endblock %}
 
 {% block object-tools %}
-    GLOBAL
-    {% thumbnail image 430x360 box=image.cropping %}
     {% if change and not is_popup %}
         <ul class="object-tools">
             <li><a href="{% url history_url object_id %}" class="historylink">{% trans "History" %}</a></li>
@@ -41,5 +39,5 @@
             {% endif%}
         </ul>
     {% endif %}
-    {% include "admin/filer/tools/detail_info.html" with detail=True %}
+    {% include "admin/tools/detail_info.html" with detail=True %}
 {% endblock %}
